--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reat-expense-tracker",
+  "name": "react-expense-tracker",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
